# iotedge

./: Azure.IoT.Edge.DotSettings  Microsoft.Azure.Devices.Edge.sln.DotSettings  Settings.StyleCop
edgelet/: Cargo.toml
edgelet/.cargo/: config
edgelet/docker-rs/src/apis/: container_api.rs  image_api.rs  network_api.rs  system_api.rs  volume_api.rs
edgelet/dps/: Cargo.toml
edgelet/dps/src/: lib.rs  registration.rs
edgelet/edgelet-core/: Cargo.toml
edgelet/edgelet-core/src/: lib.rs
edgelet/edgelet-docker/: Cargo.toml
edgelet/edgelet-docker/src/: lib.rs  module.rs  runtime.rs
edgelet/edgelet-http/: Cargo.toml
edgelet/edgelet-http-mgmt/src/client/: module.rs
edgelet/edgelet-http-mgmt/src/server/: mod.rs
edgelet/edgelet-http/src/: authorization.rs  client.rs  lib.rs  logging.rs  version.rs
edgelet/edgelet-http/src/route/: mod.rs
edgelet/edgelet-http/src/util/: connector.rs  hyperwrap.rs  incoming.rs  mod.rs  proxy.rs
edgelet/edgelet-http/tests/: connector.rs  systemd.rs
edgelet/edgelet-iothub/src/: lib.rs
edgelet/edgelet-test-utils/: Cargo.toml
edgelet/edgelet-test-utils/src/: json_connector.rs  lib.rs
edgelet/hyper-named-pipe/src/: uri.rs
edgelet/hyper-named-pipe/tests/: smoke.rs
edgelet/iotedge/: Cargo.toml
edgelet/iotedge/src/: lib.rs  logs.rs  main.rs
edgelet/iotedged/src/: lib.rs
edgelet/iothubservice/examples/: device.rs
edgelet/iothubservice/src/: device.rs
edgelet/tokio-named-pipe/: Cargo.toml
edgelet/tokio-named-pipe/src/: lib.rs
edgelet/tokio-named-pipe/tests/: smoke.rs
(+7 files in other folders)
