[workspace]
members = [
    "docker-rs",
    "dps",
    "edgelet-core",
    "edgelet-docker",
    "edgelet-hsm",
    "edgelet-http",
    "edgelet-http-mgmt",
    "edgelet-http-workload",
    "edgelet-iothub",
    "edgelet-test-utils",
    "edgelet-utils",
    "hsm-rs",
    "hsm-sys",
    "hyper-named-pipe",
    "iotedge",
    "iotedged",
    "iothubservice",
    "management",
    "provisioning",
    "systemd",
    "tokio-named-pipe",
    "win-logger",
]

[profile.dev]
codegen-units = 1
incremental = false

[profile.test]
codegen-units = 1
incremental = false
